fse-pm-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fse-pm-app
  name: fse-pm-app
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 31200
  selector:
    io.kompose.service: fse-pm-app
